Fix the display on mobile, by setting the viewport in the head section.

--- a/iou/static/iou/css/iou.css
+++ b/iou/static/iou/css/iou.css
@@ -2,8 +2,6 @@ body {
     background-color: #F0F4FF;
     font-family: system-ui, Roboto, Arial, ui-sans-serif;
     padding: 1rem;
-    max-width: 500px;
-    margin:auto;
 }
 
 form label {
